--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
     "version": 2,
     "builds": [
-      { "src": "app.py", "use": "@vercel/python" }
+      {
+        "src": "app/main.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb" }
+      }
     ],
     "routes": [
-      { "src": "/.*", "dest": "app.py" }
+      { "src": "/(.*)", "dest": "app/main.py" }
     ]
   }
   
